welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: not found: value ouest
    if (getDirection==ouest){
                      ^SnakeBuggle:18: error: not found: value est
    if (getDirection==est){
                      ^SnakeBuggle:25: error: not found: value ouest
     if (getDirection==ouest){
                       ^